<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/str_checkout"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/str_your_name"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_checkout_hints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_checkout_fields"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:hint="@string/str_checkout_name_hint"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_checkout_hints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/str_your_email"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_checkout_hints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_checkout_fields"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:hint="@string/str_checkout_email_hint"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_checkout_hints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swTerms"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:thumb="@drawable/bg_switch_thumb"
            app:track="@drawable/bg_switch_track" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/str_terms_and_conditions"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_checkout_hints" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPayment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_checkout_pay"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_sub_title"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>